2010-11-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-pair-pairs): New var.
	(electric-pair-post-self-insert-function): Use it.
	(electric-layout-post-self-insert-function): Don't insert a before
	newline unless it's actually needed.

2010-11-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (run-python): Explain why we remove the current
	directory from sys.path.  Suggested by Eric Hanchrow <erich@cozi.com>.

	* progmodes/grep.el (grep-regexp-alist): Tighten the regexp (bug#7378).

2010-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave-mod.el: Rely on elecric-*-modes.
	(octave-mode-map): Don't bind ;, SPC, and LF.
	(octave-auto-indent, octave-auto-newline): Remove.
	(electric-layout-rules): Declare.
	(octave-mode): Set electric-layout-rules.
	(octave-indent-new-comment-line): Use reindent-then-newline-and-indent.
	(octave-reindent-then-newline-and-indent, octave-electric-semi)
	(octave-electric-space): Remove.

	* electric.el (electric-layout-mode): New minor mode.
	(electric--after-char-pos): New function.
	(electric-indent-post-self-insert-function): Use it.
	(electric-layout-rules): New var.
	(electric-layout-post-self-insert-function): New function.
	(electric-indent-mode): Make them interact better.

2010-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/checkdoc.el (checkdoc-syntax-table): Fix last change.
	(checkdoc-sentencespace-region-engine, checkdoc-this-string-valid)
	(checkdoc-proper-noun-region-engine): Use with-syntax-table.

2010-11-15  Agustín Martín  <agustin.martin@hispalinux.es>

	* textmodes/flyspell.el (flyspell-generic-progmode-verify):
	Make sure to check inside the word (Bug#6761).

2010-11-14  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): If the cursorColor resource is set,
	change the cursor face-spec (Bug#7392).

2010-11-13  Ken Manheimer  <ken.manheimer@gmail.com>

	The main features of the following allout.el changes are: