@@ -1,5 +1,8 @@
 2010-11-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (completion-fail-discreetly): New var.
+	(completion--do-completion): Use it.
+
 	* electric.el (electric-pair-pairs): New var.
 	(electric-pair-post-self-insert-function): Use it.
 	(electric-layout-post-self-insert-function): Don't insert a before
